# Numatrix

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Vector1D.hpp  sum.hpp
src/: Vector1D.cpp  main.cpp  sum.cpp
