cmake_minimum_required(VERSION 3.10)
project(NumpyCpp LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20) 
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories(include)
add_library(numacpp STATIC src/Vector1D.cpp)
target_include_directories(numacpp PUBLIC include)
add_executable(test_vec src/main.cpp)
target_link_libraries(test_vec PRIVATE numacpp)